Update plugin.yml and PluginTabCompleter for 3 arguments